tests/fail/bang_in_map.msh
[1 2 3] map. "hello" wle ['false']! end
